@@ -1,3 +1,7 @@
+2008-09-14  Jeff Segars  <jeff@webempoweredchurch.org>
+
+	* Fixed bug #9172: Wrong display of deleted owners and groups in Web->Access->Permissions (thanks to Johannes Pieper)
+
 2008-09-14  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #9308: htmlArea RTE: link on colour name doesn't set colour
